[package]
name = "exifgeo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
kamadak-exif = "0.6"
log = "0.4"
env_logger = "0.11"
dirs-next = "2.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

